--- a/squid.conf
+++ b/squid.conf
@@ -3086,6 +3086,10 @@ broken_vary_encoding allow apache
 
 # old 'http_anonymizer standard'
 header_access From deny all
+
+# allow Privoxy configuration to see the Referer (provides standard interface), block all else
+acl privoxy-config dstdomain config.privoxy.org p.p
+header_access Referer allow privoxy-config
 # forge Referer in Privoxy
 header_access Referer deny all
 header_access Server deny all
