--- a/pf.conf
+++ b/pf.conf
@@ -52,10 +52,14 @@ scrub-anchor "com.apple/*"
 # OpenVPN Server NAT
 # 
 # The Book of PF, p. 21
+# Allow VPN connections to the VPN host:
+# http://serverfault.com/questions/555594/troubleshoot-broken-tcp-from-openvpn-client-to-server-but-ping-traceroute-work
 int_if = "en0"
 tun_if = "utun0"
-# use ($tun_if) because utun0 doesn't exist at boot time
-#nat on $int_if inet from $vpn_net to any -> $int_if
+no nat on ! $tun_if from $vpn_net to ($int_if)
+nat on ! $tun_if from $vpn_net to ! ($int_if) -> ($int_if)
+# This rule must be included below BEFORE these packets are passed by other rules:
+#pass in quick on $tun_if reply-to $tun_if from $vpn_net to $int_if
 
 nat-anchor "com.apple/*"
 rdr-anchor "com.apple/*"
