--- a/pf.conf
+++ b/pf.conf
@@ -67,6 +67,10 @@ dummynet-anchor "com.apple/*"
 anchor "com.apple/*"
 load anchor "com.apple" from "/etc/pf.anchors/com.apple"
 
+# OS X Server Adaptive Firewall
+# Comment out for nonOS X Server instances
+anchor "com.apple.server-firewall/*"
+load anchor "com.apple.server-firewall" from "/etc/pf.anchors/com.apple.server-firewall"
 
 # Filtering
 
