--- a/pf.conf
+++ b/pf.conf
@@ -74,9 +74,25 @@ load anchor "com.apple.server-firewall" from "/etc/pf.anchors/com.apple.server-f
 
 # Filtering
 
-# Pass by default
-pass all
+# Block by default
+block all
 
+# debugging rules
+# $ sudo ifconfig pflog0 create 
+# $ sudo tcpdump -n -e -ttt -i pflog0
+# $ sudo ifconfig pflog0 destroy 
+# block log (all, to pflog0) all
+
+# Allow VPN connections to the VPN host:
+# http://serverfault.com/questions/555594/troubleshoot-broken-tcp-from-openvpn-client-to-server-but-ping-traceroute-work
+pass in quick on $tun_if reply-to $tun_if from $vpn_net to $int_if
+
+# Local net
+table <lan_inet> const { lo0, 10/8, 172.16/12, 192.168/16 }
+table <lan_inet6> const { ::1, fe80::/10 }
+
+pass quick inet from <lan_inet> to any keep state
+pass quick inet6 from <lan_inet6> to any keep state
 # Antispoof
 # This breaks ping, DNS on OS X Server
 #antispoof log quick for { lo0 $int_if ($tun_if) } inet
@@ -86,9 +102,6 @@ block drop in log quick from no-route to any
 block drop in log quick from urpf-failed to any
 # This is observed on OS X
 #block drop in log quick on $int_if from any to 255.255.255.255
-
-# Local net
-pass quick from { lo0 $int_if ($tun_if) } to any
 
 # Whitelist
 # Hardcoded IPs
