--- a/pf.conf
+++ b/pf.conf
@@ -157,6 +157,8 @@ internet_tcp_services = "{ 995, 1640, 1723, 2195,	\
 	8008, 8443, 8800, 8843, 9001, 9030 }"
 pass in proto udp from any to { lo0 $int_if } port $internet_udp_services
 pass in proto tcp from any to { lo0 $int_if } port $internet_tcp_services
+apns_services = "{ 2195, 2196 }"
+pass in proto tcp from any port $apns_services to <lan_inet>
 # ssh really restrictive
 pass in inet proto tcp from any to { lo0 $int_if } port ssh	\
 	keep state (max-src-conn 5, max-src-conn-rate 5/2,		\
@@ -166,4 +168,4 @@ pass in inet proto tcp from any to { lo0 $int_if }	\
 	port { smtp, https, imap, submission, imaps, eyetv }		\
 	keep state (max-src-nodes 50, max-src-conn 200, max-src-conn-rate 100/10,	\
 	overload <bruteforce> flush global)
-
+pass out inet proto tcp from $int_if port { imap4-ssl, imaps } to any
