--- a/squid.conf
+++ b/squid.conf
@@ -3084,6 +3084,19 @@ broken_vary_encoding allow apache
 #Default:
 # none
 
+# allow localnet headers
+header_access From allow localnet
+header_access Server allow localnet
+header_access Link allow localnet
+
+header_access Cache-Control allow localnet
+header_access X-Cache allow localnet 
+header_access X-Cache-Lookup allow localnet
+header_access Via allow localnet
+header_access Forwarded-For allow localnet
+header_access X-Forwarded-For allow localnet
+header_access Pragma allow localnet
+
 # old 'http_anonymizer standard'
 header_access From deny all
 
@@ -4463,8 +4476,10 @@ acl app-store-domains dstdomain \
 	.mzstatic.com \
 	.itunes.apple.com \
 	.phobos.apple.com.edgesuite.net \
+	.mzstatic.com.edgesuite.net \
 	.phobos.apple.com \
 	swdist.apple.com \
+	swscan.apple.com \
 	.symcb.com \
 	.symcd.com
 always_direct allow app-store-domains
