--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "privoxy-adblock"]
 	path = privoxy-adblock
-	url = git://github.com/essandess/privoxy-adblock
+	url = https://github.com/essandess/privoxy-adblock
