--- a/squid.conf
+++ b/squid.conf
@@ -4683,6 +4683,10 @@ coredump_dir /opt/local/var/squid/cache
 #Default:
 # By default, this directive is unused and has no effect.
 
+# I2P
+# acl i2p dstdomain -n .i2p
+# cache deny i2p
+
 #  TAG: send_hit
 #	Responses denied by this directive will not be served from the cache
 #	(but may still be cached, see store_miss). This directive has no
