--- a/squid.conf
+++ b/squid.conf
@@ -6843,23 +6843,21 @@ always_direct allow mydomainname
 # Do not forward SSL requests to Privoxy
 always_direct allow SSL_ports
 
-# Do not forward App Store updates
-acl app-store-browser browser MacAppStore.+
-always_direct allow app-store-browser
-acl app-store-x-header req_header X-Apple-Store-Front .+
-always_direct allow app-store-x-header
-# http://help.getbusi.com/kb/getbusi-alert-advance/itunes-and-app-store-content-not-loading-through-getbusi
-acl app-store-domains dstdomain \
-       .mzstatic.com \
-       .itunes.apple.com \
-       .phobos.apple.com.edgesuite.net \
-       .mzstatic.com.edgesuite.net \
-       .phobos.apple.com \
-       swdist.apple.com \
-       swscan.apple.com \
-       .symcb.com \
-       .symcd.com
-always_direct allow app-store-domains
+# Do not forward App Store updates to Privoxy
+# Rather than follow the App Store and other Apple stuff through packet capture,
+# simply allow all traffic to Apple's 17.154/16 subnet and Akamai
+# http://stackoverflow.com/questions/39369248/give-access-to-the-appstore-in-a-w
+ifi-hotspot
+# Convert these IP ranges to CIDR:
+# whois `nslookup phobos.apple.com | grep Address | tail -1 | perl -ane 'chomp; s/Address: //; print $_'`
+# whois 23.63.98.0
+acl apple-appservices-and-akamai-subnets dst \
+        17.154.0.0/16 \
+        23.63.98.0/23
+# Add these Akamai ranges (23.32.0.0-23.67.255.255) if they're ever needed:
+# 23.32.0.0/11
+# 23.64.0.0/14
+always_direct allow apple-appservices-and-akamai-subnets
 
 #  TAG: never_direct
 #	Usage: never_direct allow|deny [!]aclname ...
