--- a/squid.conf
+++ b/squid.conf
@@ -8039,6 +8039,7 @@ forwarded_for off
 #	Whether to lookup the EUI or MAC address of a connected client.
 #Default:
 # eui_lookup on
+eui_lookup off
 
 #  TAG: max_filedescriptors
 #	Reduce the maximum number of filedescriptors supported below
