--- a/config
+++ b/config
@@ -362,7 +362,8 @@ logdir /opt/local/var/log/privoxy
 actionsfile match-all.action # Actions that are applied to all sites and maybe overruled later on.
 actionsfile default.action   # Main actions file
 actionsfile user.action      # User customizations
-actionsfile easylist.script.action      # Adblock's converted customizations
+actionsfile /usr/local/etc/adblock2privoxy/privoxy/ab2p.system.action
+actionsfile /usr/local/etc/adblock2privoxy/privoxy/ab2p.action
 #
 #  2.5. filterfile
 #  ================
@@ -409,6 +410,8 @@ actionsfile easylist.script.action      # Adblock's converted customizations
 filterfile default.filter
 filterfile user.filter      # User customizations
 filterfile easylist.script.filter      # Adblock's converted customizations
+filterfile /usr/local/etc/adblock2privoxy/privoxy/ab2p.system.filter
+filterfile /usr/local/etc/adblock2privoxy/privoxy/ab2p.filter
 #
 #  2.6. logfile
 #  =============
