Add additional utun interfaces in case macOS+Tunnelblick create extras

--- a/pf.conf
+++ b/pf.conf
@@ -55,9 +55,14 @@ scrub-anchor "com.apple/*"
 # Allow VPN connections to the VPN host:
 # http://serverfault.com/questions/555594/troubleshoot-broken-tcp-from-openvpn-client-to-server-but-ping-traceroute-work
 int_if = "en0"
-tun_if = "utun0"
-no nat on ! $tun_if from $vpn_net to ($int_if)
-nat on ! $tun_if from $vpn_net to ! ($int_if) -> ($int_if)
+#tun_if = "utun0"
+#no nat on ! $tun_if from $vpn_net to ($int_if)
+#nat on ! $tun_if from $vpn_net to ! ($int_if) -> ($int_if)
+# Use a list in case Tunnelblick creates multiples utun interaces
+#tun_if = "{ utun0, utun1, utun2, utun3, utun4, utun5, utun6, utun7, utun8, utun9 }"
+not_tun_if = "{ !utun0, !utun1, !utun2, !utun3, !utun4, !utun5, !utun6, !utun7, !utun8, !utun9 }"
+no nat on $not_tun_if from $vpn_net to ($int_if)
+nat on $not_tun_if from $vpn_net to ! ($int_if) -> ($int_if)
 # This rule must be included below BEFORE these packets are passed by other rules:
 #pass in quick on $tun_if reply-to $tun_if from $vpn_net to $int_if
 
@@ -85,7 +90,18 @@ block all
 
 # Allow VPN connections to the VPN host:
 # http://serverfault.com/questions/555594/troubleshoot-broken-tcp-from-openvpn-client-to-server-but-ping-traceroute-work
-pass in quick on $tun_if reply-to $tun_if from $vpn_net to $int_if
+#pass in quick on $tun_if reply-to $tun_if from $vpn_net to $int_if
+# Rule for a lot of utun interfaces in case Tunnelblick creates extras
+pass in quick on utun0 reply-to utun0 from $vpn_net to $int_if
+pass in quick on utun1 reply-to utun1 from $vpn_net to $int_if
+pass in quick on utun2 reply-to utun2 from $vpn_net to $int_if
+pass in quick on utun3 reply-to utun3 from $vpn_net to $int_if
+pass in quick on utun4 reply-to utun4 from $vpn_net to $int_if
+pass in quick on utun5 reply-to utun5 from $vpn_net to $int_if
+pass in quick on utun6 reply-to utun6 from $vpn_net to $int_if
+pass in quick on utun7 reply-to utun7 from $vpn_net to $int_if
+pass in quick on utun8 reply-to utun8 from $vpn_net to $int_if
+pass in quick on utun9 reply-to utun9 from $vpn_net to $int_if
 
 # Local net
 table <lan_inet> const { lo0, 10/8, 172.16/12, 192.168/16 }
