--- a/squid.conf
+++ b/squid.conf
@@ -1668,7 +1668,7 @@ icp_access deny all
 #
 
 # Squid normally listens to port 3128
-http_port 3128
+http_port 127.0.0.1:3128
 
 #  TAG: https_port
 #	Usage:  [ip:]port cert=certificate.pem [key=key.pem] [mode] [options...]
@@ -3007,7 +3007,10 @@ http_port 3128
 
 # See http://www.privoxy.org/user-manual/config.html
 # Define Privoxy as parent proxy (without ICP) 
-cache_peer 10.0.1.3 parent 8118 0 no-digest no-query default name=privoxy
+cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
+
+# If privoxy is run on the LAN:
+#cache_peer 10.0.1.3 parent 8118 0 no-digest no-query default name=privoxy
 
 # I2P
 # cache_peer 127.0.0.1 parent 4443 0 no-digest no-query default name=i2p
