Optimize squid.conf

--- a/squid.conf
+++ b/squid.conf
@@ -3177,6 +3177,8 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 #Default:
 # maximum_object_size_in_memory 512 KB
 
+maximum_object_size_in_memory 64 KB
+
 #  TAG: memory_cache_shared	on|off
 #	Controls whether the memory cache is shared among SMP workers.
 #
@@ -3261,6 +3263,8 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 #Default:
 # cache_replacement_policy lru
 
+cache_replacement_policy heap LFUDA
+
 #  TAG: minimum_object_size	(bytes)
 #	Objects smaller than this size will NOT be saved on disk.  The
 #	value is specified in bytes, and the default is 0 KB, which
@@ -3284,6 +3288,8 @@ cache_peer 127.0.0.1 parent 8118 0 no-digest no-query default name=privoxy
 #	See cache_replacement_policy for a discussion of this policy.
 #Default:
 # maximum_object_size 4 MB
+
+maximum_object_size 64 MB
 
 #  TAG: cache_dir
 #	Format:
@@ -4165,6 +4171,7 @@ access_log daemon:/opt/local/var/squid/logs/access.log squid
 #	Currently honored by 'daemon' and 'tcp' access_log modules only.
 #Default:
 # buffered_logs off
+buffered_logs on
 
 #  TAG: netdb_filename
 # Note: This option is only available if Squid is rebuilt with the
@@ -4871,10 +4878,12 @@ refresh_pattern . 0 40% 40320
 #  TAG: quick_abort_min	(KB)
 #Default:
 # quick_abort_min 16 KB
+quick_abort_min 0 KB
 
 #  TAG: quick_abort_max	(KB)
 #Default:
 # quick_abort_max 16 KB
+quick_abort_max 0 KB
 
 #  TAG: quick_abort_pct	(percent)
 #	The cache by default continues downloading aborted requests
@@ -6348,6 +6357,7 @@ visible_hostname mydomainname.com
 #	up or to simplify log analysis.
 #Default:
 # log_icp_queries on
+log_icp_queries off
 
 #  TAG: udp_incoming_address
 #	udp_incoming_address	is used for UDP packets received from other
@@ -7740,6 +7750,7 @@ fqdncache_size 1048576
 #	routines, disable this.
 #Default:
 # memory_pools on
+memory_pools off
 
 #  TAG: memory_pools_limit	(bytes)
 #	Used only with memory_pools on:
@@ -7854,6 +7865,7 @@ forwarded_for off
 #	turn off client_db here.
 #Default:
 # client_db on
+client_db off
 
 #  TAG: refresh_all_ims	on|off
 #	When you enable this option, squid will always check
