Renaming, minor fixes

--- a/pf.conf
+++ b/pf.conf
@@ -72,8 +72,8 @@ dummynet-anchor "com.apple/*"
 anchor "com.apple/*"
 load anchor "com.apple" from "/etc/pf.anchors/com.apple"
 
-# OS X Server Adaptive Firewall
-# Comment out for nonOS X Server instances
+# macOS Server Adaptive Firewall
+# Comment out for non-macOS Server instances
 anchor "com.apple.server-firewall/*"
 load anchor "com.apple.server-firewall" from "/etc/pf.anchors/com.apple.server-firewall"
 
@@ -110,13 +110,13 @@ table <lan_inet6> const { ::1, fe80::/10 }
 pass quick inet from <lan_inet> to any keep state
 pass quick inet6 from <lan_inet6> to any keep state
 # Antispoof
-# This breaks ping, DNS on OS X Server
+# This breaks ping, DNS on macOS Server
 #antispoof log quick for { lo0 $int_if ($tun_if) } inet
 
 # Block to/from illegal destinations or sources
 block drop in log quick from no-route to any
 block drop in log quick from urpf-failed to any
-# This is observed on OS X
+# This is observed on macOS
 #block drop in log quick on $int_if from any to 255.255.255.255
 
 # Whitelist
