--- a/squid.conf
+++ b/squid.conf
@@ -5336,8 +5336,7 @@ request_header_access X_MTI_EMPID deny all
 # none
 
 request_header_access User-Agent deny all
-request_header_replace User-Agent Mozilla/5.0 (iPad; CPU OS 6_1 like Mac OS X) AppleWebKit/536.26 (KHTML, like Gecko) Version/6.0 Mobile/10B141 Safari/8536.25
-
+request_header_replace User-Agent Mozilla/5.0 (iPad; CPU OS 11_2_1 like Mac OS X) AppleWebKit/604.4.7 (KHTML, like Gecko) Version/11.0 Mobile/15C153 Safari/604.1
 
 #  TAG: reply_header_replace
 #        Usage:   reply_header_replace header_name message
