squid configuration and launch options

--- a/squid.conf
+++ b/squid.conf
@@ -5556,6 +5556,10 @@ request_header_replace User-Agent Mozilla/5.0 (iPad; CPU OS 11_2_1 like Mac OS X
 #	seconds will receive a 'timeout' message.
 #Default:
 # shutdown_lifetime 30 seconds
+# Make this significantly less than daemondo's kChildDeathTimeout
+# to avoid multiple squid processes at boot or on network change
+# const CFTimeInterval kChildDeathTimeout = 20;
+shutdown_lifetime 5 seconds
 
 # ADMINISTRATIVE PARAMETERS
 # -----------------------------------------------------------------------------
@@ -8004,6 +8008,7 @@ client_db off
 #	WARNING: pipelining breaks NTLM and Negotiate/Kerberos authentication.
 #Default:
 # Do not pre-parse pipelined requests.
+pipeline_prefetch 3
 
 #  TAG: high_response_time_warning	(msec)
 #	If the one-minute median response time exceeds this value,
