--- a/net.openbsd.pf.plist
+++ b/net.openbsd.pf.plist
@@ -2,16 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+        <key>Disabled</key>
+        <string>false</string>
 	<key>Label</key>
 	<string>net.openbsd.pf.plist</string>
+        <key>WorkingDirectory</key>
+        <string>/var/run</string>
 	<key>Program</key>
-	<string>/sbin/pfctl</string>
+	<string>/bin/bash</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/sbin/pfctl</string>
-		<string>-e</string>
-		<string>-f</string>
-		<string>/etc/pf.conf</string>
+                <string>/bin/bash</string>
+                <string>-c</string>
+		<string>for tt in {1..4}; do if [[ `/sbin/ifconfig | /opt/local/bin/pcregrep -M -o &apos;^[^\t:]+:([^\n]|\n\t)*status: active&apos; | /usr/bin/egrep -o -m 1 &apos;^[^\t:]+&apos;` = &apos;&apos; ]]; then /bin/sleep 45; else /sbin/pfctl -Fall &amp;&amp; /sbin/pfctl -ef /etc/pf.conf; break; fi; done</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
