--- a/deprecated/squid-27.conf
+++ b/deprecated/squid-27.conf
@@ -87,7 +87,7 @@
 #
 #	Then, set this line to something like
 #
-#	auth_param basic program /opt/local/libexec/ncsa_auth /opt/local/etc/passwd
+#	auth_param basic program /usr/local/libexec/ncsa_auth /usr/local/etc/passwd
 #
 #	"children" numberofchildren
 #	The number of authenticator processes to spawn. If you start too few
@@ -154,7 +154,7 @@
 #
 #	Then, set this line to something like
 #
-#	auth_param digest program /opt/local/libexec/digest_auth_pw /opt/local/etc/digpass
+#	auth_param digest program /usr/local/libexec/digest_auth_pw /usr/local/etc/digpass
 #
 #	"children" numberofchildren
 #	The number of authenticator processes to spawn. If you start too few
@@ -1926,7 +1926,7 @@ cache_mem 32 MB
 #	(hard coded at 1 MB).
 #
 #Default:
-# cache_dir ufs /opt/local/var/squid/cache 100 16 256
+# cache_dir ufs /usr/local/var/squid/cache 100 16 256
 
 #  TAG: store_dir_select_algorithm
 #	Set this to 'round-robin' as an alternative.
@@ -2098,7 +2098,7 @@ cache_mem 32 MB
 #
 #	And priority could be any of:
 #	err, warning, notice, info, debug.
-access_log /opt/local/var/squid/logs/access.log squid
+access_log /usr/local/var/squid/logs/access.log squid
 
 #  TAG: log_access	allow|deny acl acl...
 #	This options allows you to control which requests gets logged
@@ -2113,7 +2113,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	used to write the access and store logs, if configured.
 #
 #Default:
-# logfile_daemon /opt/local/libexec/squid/logfile-daemon
+# logfile_daemon /usr/local/libexec/squid/logfile-daemon
 
 #  TAG: cache_log
 #	Cache logging file. This is where general information about
@@ -2121,7 +2121,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	logged to this file with the "debug_options" tag below.
 #
 #Default:
-# cache_log /opt/local/var/squid/logs/cache.log
+# cache_log /usr/local/var/squid/logs/cache.log
 
 #  TAG: cache_store_log
 #	Logs the activities of the storage manager.  Shows which
@@ -2131,7 +2131,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	disable it.
 #
 #Default:
-# cache_store_log /opt/local/var/squid/logs/store.log
+# cache_store_log /usr/local/var/squid/logs/store.log
 
 #  TAG: cache_swap_state
 #	Location for the cache "swap.state" file. This index file holds
@@ -2207,7 +2207,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	information if you do.
 #
 #Default:
-# mime_table /opt/local/etc/squid/mime.conf
+# mime_table /usr/local/etc/squid/mime.conf
 
 #  TAG: log_mime_hdrs	on|off
 #	The Cache can record both the request and the response MIME
@@ -2247,7 +2247,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	A filename to write the process-id to.  To disable, enter "none".
 #
 #Default:
-# pid_filename /opt/local/var/run/squid/squid.pid
+# pid_filename /usr/local/var/run/squid/squid.pid
 
 #  TAG: debug_options
 #	Logging options are set as section,level where each source file
@@ -2312,7 +2312,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	To disable, enter "none".
 #
 #Default:
-# netdb_filename /opt/local/var/squid/logs/netdb.state
+# netdb_filename /usr/local/var/squid/logs/netdb.state
 
 
 # OPTIONS FOR FTP GATEWAYING
@@ -2382,13 +2382,13 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	diskd as one of the store io modules.
 #
 #Default:
-# diskd_program /opt/local/libexec/squid/diskd-daemon
+# diskd_program /usr/local/libexec/squid/diskd-daemon
 
 #  TAG: unlinkd_program
 #	Specify the location of the executable for file deletion process.
 #
 #Default:
-# unlinkd_program /opt/local/libexec/squid/unlinkd
+# unlinkd_program /usr/local/libexec/squid/unlinkd
 
 #  TAG: pinger_program
 # Note: This option is only available if Squid is rebuilt with the
@@ -2397,7 +2397,7 @@ access_log /opt/local/var/squid/logs/access.log squid
 #	Specify the location of the executable for the pinger process.
 #
 #Default:
-# pinger_program /opt/local/libexec/squid/pinger
+# pinger_program /usr/local/libexec/squid/pinger
 
 
 # OPTIONS FOR URL REWRITING
@@ -4239,10 +4239,10 @@ visible_hostname mydomainname.com
 
 #  TAG: icon_directory
 #	Where the icons are stored. These are normally kept in
-#	/opt/local/share/squid/icons
+#	/usr/local/share/squid/icons
 #
 #Default:
-# icon_directory /opt/local/share/squid/icons
+# icon_directory /usr/local/share/squid/icons
 
 #  TAG: global_internal_static
 #	This directive controls is Squid should intercept all requests for
@@ -4281,7 +4281,7 @@ visible_hostname mydomainname.com
 #	contributing your translation back to the project.
 #
 #Default:
-# error_directory /opt/local/share/squid/errors/English
+# error_directory /usr/local/share/squid/errors/English
 
 #  TAG: error_map
 #	Map errors to custom messages
@@ -4609,7 +4609,7 @@ never_direct allow all
 #	Specify the location of the executable for dnslookup process.
 #
 #Default:
-# cache_dns_program /opt/local/libexec/squid/dnsserver
+# cache_dns_program /usr/local/libexec/squid/dnsserver
 
 #  TAG: dns_children
 # Note: This option is only available if Squid is rebuilt with the
@@ -4956,7 +4956,7 @@ forwarded_for off
 # coredump_dir none
 #
 # Leave coredumps in the first cache dir
-coredump_dir /opt/local/var/squid/cache
+coredump_dir /usr/local/var/squid/cache
 
 #  TAG: chroot
 #	Use this to have Squid do a chroot() while initializing.  This
