Forward SSL requests through Privoxy

--- a/squid.conf
+++ b/squid.conf
@@ -6865,7 +6865,7 @@ acl mydomainname dstdomain .mydomainname.com
 always_direct allow mydomainname
 
 # Do not forward SSL requests to Privoxy
-always_direct allow SSL_ports
+#always_direct allow SSL_ports
 
 #  TAG: never_direct
 #	Usage: never_direct allow|deny [!]aclname ...
